Intellij code cleanup
Signed-off-by: Cyrille Le Clerc <cyrille.leclerc@grafana.com>